# wp-labs-starter

./: .gitignore  CLAUDE.md  README.md  team-settings.json
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: build-review-payload.jq  ci.yml  dependabot-automerge.yml  refresh-superpowers-fork.yml  security.yml
.superpowers/01-specs/: 2026-06-26-1335-superpowers-dot-folder-lifecycle.md
.superpowers/03-review/: 2026-07-24-pr-111.md
docs/: 2026-06-22-1403_expand_gitignore_for_the_stack.md  session-summarize.md  setting-up-claude-environment.md  setting-up-project-sdlc.md  superpowers-spec-lifecycle.md  using-queue-groups.md
docs/01-specs/: 2026-06-17-2157-claude-team-marketplace.md  2026-06-18-1911-scaffolding-sdlc-skill-design.md  2026-06-23-1738-wp-labs-planner.md  2026-06-24-1053-change-review-dispatcher.md  2026-06-24-1219-gsheet-todo-collector.md  2026-06-24-1753-weekly-template-redesign.md  2026-06-24-2330-daily-pr-listing.md  2026-06-26-0032-azure-container-apps-deploy-option.md
docs/02-plans/: 2026-06-19-0102-scaffolding-sdlc-skill.md  2026-06-23-2303-wp-labs-planner-implementation.md  2026-06-24-1106-change-review-dispatcher.md  2026-06-24-1243-gsheet-todo-collector.md  2026-06-24-1647-inline-review-comments.md  2026-06-24-2045-weekly-template-redesign.md
plugins/sdlc/.claude-plugin/: plugin.json
plugins/sdlc/skills/scaffolding-sdlc/templates/fullstack/scaffold/: pyproject.toml
plugins/sdlc/skills/scaffolding-sdlc/templates/fullstack/scaffold/api/: models.py  views.py
plugins/sdlc/skills/scaffolding-sdlc/templates/fullstack/scaffold/api/migrations/: 0001_initial.py
plugins/sdlc/skills/scaffolding-sdlc/templates/fullstack/scaffold/api/tests/: test_widgets.py
plugins/sdlc/skills/scaffolding-sdlc/templates/fullstack/scaffold/config/: settings.py  urls.py
plugins/sdlc/skills/scaffolding-sdlc/templates/fullstack/scaffold/frontend/: vite.config.ts
plugins/sdlc/skills/scaffolding-sdlc/templates/fullstack/scaffold/frontend/e2e/: home.spec.ts
plugins/sdlc/skills/scaffolding-sdlc/templates/fullstack/scaffold/frontend/src/: App.test.tsx
plugins/sdlc/skills/scaffolding-sdlc/templates/fullstack/scaffold/frontend/src/components/: Greeting.test.tsx  Greeting.tsx
plugins/sdlc/skills/scaffolding-sdlc/templates/fullstack/scaffold/frontend/src/lib/: api.ts
plugins/sdlc/skills/scaffolding-sdlc/templates/fullstack/scaffold/frontend/src/pages/: Home.tsx  Widgets.tsx
plugins/standards/hooks/: hooks.json
plugins/superpowers-team/: FORK.md
plugins/superpowers-team/.claude-plugin/: plugin.json
plugins/wp-labs-planner/: README.md
plugins/wp-labs-sdlc/.claude-plugin/: plugin.json
plugins/wp-labs-sdlc/skills/scaffolding-sdlc/templates/python/scaffold/app/: pyproject.toml
plugins/wp-labs-sdlc/skills/session-dashboard/tests/: pyproject.toml  test_dashboard.py
plugins/wp-labs-superpowers/: FORK.md  FORK_MODIFICATIONS.md
scripts/: refresh-superpowers-fork.sh
(+202 files in other folders)
