[project]
name = "session-dashboard-tests"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8",
    "pytest-playwright>=0.5",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
check_untyped_defs = true
warn_return_any = true

[tool.pytest.ini_options]
