[project]
name = "py-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0",
    "djangorestframework>=3.15",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0",
    "pytest-django>=4.8",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests/test_*.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "B", "BLE", "UP", "N", "SIM", "RUF", "S", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/test_*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "skip"
exclude = ["*/migrations/*", "*/tests/*"]
