[project]
name = "py-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0",
    "djangorestframework>=3.15",
    "whitenoise>=6.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-django>=4.8",
    "diff-cover>=9.0",
    "mypy>=1.10",
]
# Production/runtime extras installed in the container image (see hosting/Dockerfile).
prod = [
    "gunicorn>=21.2",
    "psycopg[binary]>=3.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests/test_*.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "B", "BLE", "UP", "N", "SIM", "RUF", "S", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/test_*.py" = ["S101"]
# Django Meta and DRF attributes are conventional untyped lists, not typed state.
"api/models.py" = ["RUF012"]
"api/serializers.py" = ["RUF012"]
"api/views.py" = ["RUF012"]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "skip"
exclude = ["*/migrations/*", "*/tests/*"]
